--- a/catacombs/catacombs.vcxproj.filters
+++ b/catacombs/catacombs.vcxproj.filters
@@ -32,4 +32,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="PixelShader.hlsl" />
+  </ItemGroup>
 </Project>
